free_cached_page(): Removed incorrect asserts. The same ones appear a few lines later anyway, after the cache has been locked and it has been verified that the page is still a candidate. Fixes #5432.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35539 a95241bf-73f2-0310-859d-f6bbb57e9c96